FIX: in help center page for accordion elements removed border and gap under last element

--- a/src/styles/_accordion.scss
+++ b/src/styles/_accordion.scss
@@ -15,11 +15,15 @@
     transition: opacity .3s;
   }
 
-  &.opened {
+  &.opened:not(:last-child) {
 
     &:after {
       opacity: 1;
     }
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 
   &__title {
